// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewQuestion /> render !@questionDataLoading && !@questionData 1`] = `
<React.Fragment>
  <UNDEFINED
    articleModifiedTime=""
    articlePublishedTime=""
    keywords=", Question's page"
    language="en"
    title="Question's page"
  />
</React.Fragment>
`;

exports[`<ViewQuestion /> render !@questionDataLoading && @questionData 1`] = `
<React.Fragment>
  <UNDEFINED
    articleModifiedTime=""
    articlePublishedTime=""
    description="content"
    keywords="tag1, title"
    language="en"
    title="title"
  />
  <UNDEFINED
    account="user1"
    communities={
      Array [
        Object {
          "id": 0,
          "tags": Array [
            Object {
              "id": 0,
              "name": "tag1",
            },
          ],
        },
      ]
    }
    deleteAnswer={[MockFunction]}
    deleteComment={[MockFunction]}
    deleteQuestion={[MockFunction]}
    downVote={[MockFunction]}
    locale="en"
    markAsAccepted={[MockFunction]}
    postAnswer={[MockFunction]}
    postAnswerLoading={true}
    postComment={[MockFunction]}
    postCommentLoading={true}
    questionData={
      Object {
        "communityId": 0,
        "content": Object {
          "content": "content",
          "title": "title",
        },
        "tags": Array [
          0,
        ],
      }
    }
    saveComment={[MockFunction]}
    translations={
      Object {
        "app.common.about": "About",
        "app.common.add": "Add",
        "app.common.addQuestion": "Add question",
        "app.common.age": "Age",
        "app.common.ago": "ago",
        "app.common.agree": "Agree",
        "app.common.all": "All",
        "app.common.allCommunities": "All communities",
        "app.common.allQuestions": "All questions",
        "app.common.amount": "Amount",
        "app.common.answered": "Answered",
        "app.common.answers": "Answers",
        "app.common.asked": "Asked",
        "app.common.cancel": "Cancel",
        "app.common.change": "Change",
        "app.common.close": "Close",
        "app.common.communities": "Communities",
        "app.common.contactUs": "Contact us",
        "app.common.contacts": "Contacts",
        "app.common.copied": "Copied",
        "app.common.copy": "Copy",
        "app.common.date": "Date",
        "app.common.disagree": "Disagree",
        "app.common.disagreeShort": "Disagree",
        "app.common.edit": "Edit",
        "app.common.en": "English",
        "app.common.energy": "Energy",
        "app.common.eosAccount": "EOS account",
        "app.common.errorMessage": "An error occurred",
        "app.common.faq": "FAQ",
        "app.common.hide": "Hide",
        "app.common.login": "Log in",
        "app.common.logout": "Log out",
        "app.common.manageMyComm": "Manage my communities",
        "app.common.moreVoting": "More voting",
        "app.common.myFeed": "My feed",
        "app.common.newest": "Newest",
        "app.common.no": "No",
        "app.common.nothingToSeeYet": "Nothing to see yet",
        "app.common.oldest": "Oldest",
        "app.common.password": "Password",
        "app.common.peeranha": "Peeranha",
        "app.common.peers": "Peers",
        "app.common.popularity": "Popularity",
        "app.common.posts": "Posts",
        "app.common.privacyPolicy": "Privacy Policy",
        "app.common.privacyPolicyShort": "Privacy Policy",
        "app.common.profile": "Profile",
        "app.common.questions": "Questions",
        "app.common.reputation": "Reputation",
        "app.common.ru": "Russian",
        "app.common.search": "Search",
        "app.common.see": "See",
        "app.common.seeAll": "See all",
        "app.common.sendAnotherCode": "Send another code",
        "app.common.sendTokens": "Send tokens",
        "app.common.settings": "Settings",
        "app.common.show": "Show",
        "app.common.signUp": "Sign Up",
        "app.common.somebodyAnswered": "{account} answered",
        "app.common.somebodyAsked": "{account} asked",
        "app.common.submit": "Submit",
        "app.common.subscribeMore": "Subscribe more",
        "app.common.subscribed": "Subscribed",
        "app.common.successMessage": "Action has been completed successfully",
        "app.common.suggestTag": "Suggest tag",
        "app.common.support": "Support",
        "app.common.tags": "Tags",
        "app.common.tips": "Tips",
        "app.common.top": "Top",
        "app.common.upload": "Upload",
        "app.common.users": "Users",
        "app.common.usersShort": "Users",
        "app.common.voting": "Voting",
        "app.common.wallet": "Wallet",
        "app.common.yes": "Yes",
        "app.common.you": "You",
        "app.common.youAnswered": "You answered",
        "app.common.youAsked": "You asked",
        "app.components.Footer.header": "Copyright: Peeranha",
        "app.components.FormFields.fileSize": "File too large",
        "app.components.FormFields.requiredField": "Required field",
        "app.components.FormFields.wrongBase58Format": "Wrong data format. Check it.",
        "app.components.FormFields.wrongEmail": "Wrong email",
        "app.components.FormFields.wrongLength": "Value must be at least {min} characters and no longer than {max} characters",
        "app.components.FormFields.wrongLengthMax": "Value must be no longer than {max} characters",
        "app.components.FormFields.wrongLengthMin": "Value must be at least {min} characters",
        "app.components.NoAccess.errorMessage": "No access to complete this action!",
        "app.components.RatingStatus.banned": "Banned",
        "app.components.RatingStatus.heroResident": "Hero Resident",
        "app.components.RatingStatus.jrResident": "Junior Resident",
        "app.components.RatingStatus.legResident": "Legendary Resident",
        "app.components.RatingStatus.newbie": "Newbie",
        "app.components.RatingStatus.resident": "Resident",
        "app.components.RatingStatus.srResident": "Senior Resident",
        "app.components.RatingStatus.stranger": "Stranger",
        "app.components.TextEditor.addForLineBreaks": "for linebreak add 2 spaces at end",
        "app.components.TextEditor.backtipEscapes": "backtick escapes \`like _so_\`",
        "app.components.TextEditor.indentCode": "indent code by 4 spaces",
        "app.components.TextEditor.italicAndBold": "_italic_ or **bold**",
        "app.components.TextEditor.putReturnsBetweenParagraphs": "put returns between paragraphs",
        "app.components.TextEditor.quoteByPlacing": "quote by placing &gt; at start of line",
        "app.components.TextEditor.tips": "Tips",
        "app.components.TextEditor.toMakeLinks": "to make links &lt;http://foo.com&gt;[foo](http://foo.com)&lt;a href=&quot;http://foo.com&quot;&gt;fo",
        "app.containers.AskQuestion.description": "Ask question | Description",
        "app.containers.AskQuestion.postQuestion": "Post question",
        "app.containers.AskQuestion.title": "Ask question",
        "app.containers.ButtonGroupForAuthorizedUser.profile": "Profile",
        "app.containers.ChangeEmail.confirmNewEmail": "Confirm new email",
        "app.containers.ChangeEmail.emailsDoNotMatch": "Emails do not match",
        "app.containers.ChangeEmail.newEmail": "New email",
        "app.containers.Communities.description": "Communities | Description",
        "app.containers.Communities.didntFindAnyInteresting": "Didn’t find anything interesting?",
        "app.containers.Communities.suggestCommunity": "Suggest community",
        "app.containers.Communities.suggestInterestingComm": "Suggest community, which will be interesting to you and 100 other users who will vote for it.",
        "app.containers.Communities.tags": "Tags",
        "app.containers.Communities.title": "Communities",
        "app.containers.Communities.voting": "Voting",
        "app.containers.CreateCommunity.avatar": "Avatar",
        "app.containers.CreateCommunity.communityDescriptionShouldBe": "Community description should be concise and describe to whom it will be useful",
        "app.containers.CreateCommunity.communityLanguage": "Language",
        "app.containers.CreateCommunity.communityLanguageTip": "Some language field tip...",
        "app.containers.CreateCommunity.communityTitle": "Title",
        "app.containers.CreateCommunity.communityTitleTip": "Some community title tip...",
        "app.containers.CreateCommunity.communityWillAppear": "Your community will appear in the list and other users can vote for it. 100 votes are needed for communuty be created.",
        "app.containers.CreateCommunity.createCommunity": "Suggest community",
        "app.containers.CreateCommunity.description": "Description of CreateCommunity",
        "app.containers.CreateCommunity.goToList": "Go to list",
        "app.containers.CreateCommunity.imageWillBeTheFace": "Image will be the face of community",
        "app.containers.CreateCommunity.newCommunity": "New community",
        "app.containers.CreateCommunity.oneMoreTag": "One more tag",
        "app.containers.CreateCommunity.onlyTagsWithUniqueTitles": "Form should allow only tags with unique names",
        "app.containers.CreateCommunity.shortDescription": "Short description",
        "app.containers.CreateCommunity.shortDescriptionTip": "Some community description tip...",
        "app.containers.CreateCommunity.specifyMemorableTitle": "Specify a memorable title",
        "app.containers.CreateCommunity.tagDescription": "Description",
        "app.containers.CreateCommunity.tagDescriptionTip": "Some tag description tip...",
        "app.containers.CreateCommunity.tagTitle": "Tag",
        "app.containers.CreateCommunity.tagTitleTip": "Some tag title tip...",
        "app.containers.CreateCommunity.tags": "Tags",
        "app.containers.CreateCommunity.tagsAreNeeded": "Tags are needed for asking questions. So you have to specify 3-30 main tags.",
        "app.containers.CreateCommunity.thatisgreat": "That's great!",
        "app.containers.CreateCommunity.title": "Community | Create",
        "app.containers.CreateCommunity.whyWeNeedIt": "Why we need it?",
        "app.containers.CreateCommunity.whyWeNeedItTip": "Some community main description tip...",
        "app.containers.CreateCommunity.writeWhyDoWeeNeed": "Write why do we need this community to attract the attention of other users and collect votes",
        "app.containers.CreateTag.community": "Community",
        "app.containers.CreateTag.communityTip": "Some community tip...",
        "app.containers.CreateTag.createTag": "Create tag",
        "app.containers.CreateTag.description": "Create tag | Description",
        "app.containers.CreateTag.descriptionField": "Description",
        "app.containers.CreateTag.descriptionFieldTip": "Some descriptions tip...",
        "app.containers.CreateTag.name": "Name",
        "app.containers.CreateTag.nameTip": "Some name tip...",
        "app.containers.CreateTag.newTag": "New tag",
        "app.containers.CreateTag.tagIsKeyword": "A tag is a keyword or label that categorizes your question with other, similar questions.",
        "app.containers.CreateTag.title": "Create tag",
        "app.containers.CreateTag.usingTheRightTags": "Using the right tags makes it easier for others to find and answer your question.",
        "app.containers.DeleteAccount.areYouLeaving": "Are you leaving?",
        "app.containers.DeleteAccount.deleteAccount": "Delete account",
        "app.containers.DeleteAccount.iHaveBackup": "I have back up of my EOS private keys.",
        "app.containers.DeleteAccount.iUnderstand": "I understand that this operation does not remove my account on EOS blockchain. Account is removed only from wallet service.",
        "app.containers.EditAnswer.description": "Edit Answer Description",
        "app.containers.EditAnswer.editAnswer": "Edit Answer",
        "app.containers.EditAnswer.submitButtonName": "Save",
        "app.containers.EditAnswer.title": "Edit Answer",
        "app.containers.EditQuestion.description": "Edit Question Description",
        "app.containers.EditQuestion.submitButtonName": "Save",
        "app.containers.EditQuestion.title": "Edit question",
        "app.containers.ErrorBoundary.description": "Description of error boundary",
        "app.containers.ErrorBoundary.details": "Details",
        "app.containers.ErrorBoundary.problemWithWebpage": "A problem occurred with this webpage",
        "app.containers.ErrorBoundary.reloadPage": "Reload page",
        "app.containers.ErrorBoundary.title": "Error",
        "app.containers.ErrorPage.description": "Some error occured... description",
        "app.containers.ErrorPage.title": "Some error occured...",
        "app.containers.ErrorPage.weAreSorry": "We're sorry, unexpected error has happened.",
        "app.containers.ExistingCommunities.voteForNewCommunities": "Vote for new communities",
        "app.containers.Faq.description": "FAQ: description",
        "app.containers.Faq.didntFindAnswer": "Didn’t find the answer?",
        "app.containers.Faq.faq": "Frequently asked questions",
        "app.containers.Faq.freeFeelToAsk": "Feel free to ask our team.  We will help to find the answer.",
        "app.containers.Faq.help": "Help",
        "app.containers.Faq.howToChargeMyEnergy": "How to charge my energy?",
        "app.containers.Faq.title": "FAQ",
        "app.containers.Faq.valueOfActions": "Value of actions",
        "app.containers.Faq.whatIsEnergy": "What is energy?",
        "app.containers.FollowCommunityButton.header": "Header",
        "app.containers.FollowCommunityButton.subscribe": "Subscribe",
        "app.containers.FollowCommunityButton.unsubscribe": "Unsubscribe",
        "app.containers.ForgotPassword.youGotThisKey": "You got this key with authorization and saved in a safe place. Try to find it.",
        "app.containers.HomePage.about": "About",
        "app.containers.HomePage.askQuestion": "Ask question",
        "app.containers.HomePage.askQuestionAndGetHelp": "Peeranha has passionate experts from all areas of life ready to help others. Users can return the favor by helping thousands of others answer questions they may also have. Users can get the answers to their questions in a matter of minutes.",
        "app.containers.HomePage.beTheFirst": "Joining early means enjoying higher levels of rewards",
        "app.containers.HomePage.description": "Decentralized questions and answers website that rewards users with crypto tokens for their contributions.",
        "app.containers.HomePage.differentThan": "Peeranha is more than a Q&A website.",
        "app.containers.HomePage.differentThan2": "It is a community that puts users at the heart by:",
        "app.containers.HomePage.earlyAdopters": "Valuing Early Adopters",
        "app.containers.HomePage.earnReputation": "Earning Reputation",
        "app.containers.HomePage.email": "Email",
        "app.containers.HomePage.emailTip": "Email tip",
        "app.containers.HomePage.faq": "FAQ",
        "app.containers.HomePage.faqDescription": "Peeranha | FAQ Description",
        "app.containers.HomePage.faqTitle": "Peeranha | FAQ",
        "app.containers.HomePage.getHelp": "Getting Help from the Community",
        "app.containers.HomePage.getMoreAnswers": "Get more answers",
        "app.containers.HomePage.getPaidInCrypto": "Receiving Crypto Token Rewards",
        "app.containers.HomePage.getPaidInCryptoFromWeekly": "A weekly pool of reward tokens is distributed to users for their contributions. Contributions include asking and answering questions. These reward tokens can be sold on the open market to anyone wanting to pay for content to be placed on the platform. This paid content may include product advertisements or job openings. Users will always be rewarded for their valuable contributions. ",
        "app.containers.HomePage.getReward": "Sign Up",
        "app.containers.HomePage.getStarted": "Get started",
        "app.containers.HomePage.goToSite": "Go to site",
        "app.containers.HomePage.helpCommunity": "Experts contribute to the community by answering questions from their peers. Answers not only help the person who asked the question but thousands of others who have similar questions. Once a question has been answered, the knowledge can be shared with current and future users.",
        "app.containers.HomePage.helpfulAndGenerous": "Helpful and generous",
        "app.containers.HomePage.honorableAndFascinating": "Honorable and fascinating",
        "app.containers.HomePage.login": "Log in",
        "app.containers.HomePage.message": "Message",
        "app.containers.HomePage.messageHasNotBeenSent": "Something went wrong and your message has not been sent. Please try again.",
        "app.containers.HomePage.messageTip": "Message tip",
        "app.containers.HomePage.nikitaSyr": "Nikita Syrovatnikov",
        "app.containers.HomePage.nikitaSyrDescription": "Blockchain app technician, interesting in solving different problems and learning new technologies. I believe that any problem can be solved with the right approach.",
        "app.containers.HomePage.nikitaSyrRole": "Back-end and Smart-contract Developer",
        "app.containers.HomePage.none": "None",
        "app.containers.HomePage.olgaFyodorova": "Olga Fedorova",
        "app.containers.HomePage.olgaFyodorovaDescription": "Strong communication skills regardless of the audience, interacting effectively with a wide range of people, executives, staff, suppliers, colleagues and applicants.",
        "app.containers.HomePage.olgaFyodorovaRole": "Marketing",
        "app.containers.HomePage.ourTeam": "Our team",
        "app.containers.HomePage.ownershipByUsers": "Ownership by Users",
        "app.containers.HomePage.participateInModeration": "Governing the community is in the hands of the members. Making the best decisions for the platform result in a higher token value. Through the governance structure built into Peeranha, the website is moderated by its users. As a decentralized, open source project, the future is decided by you the user. Much like a local community, your voice matters.",
        "app.containers.HomePage.peeranhaDecentralized": "Peeranha is truly permissionless and decentralized. Website governance is decided for the community, by the community. Peeranha puts power in the hands of the contributors, not the developers.",
        "app.containers.HomePage.peeranhaPhilosophy": "Peeranha’s philosophy is to reward early users generously for their time. As the website grows, rewards will even out and be distributed to more members of the community.",
        "app.containers.HomePage.peopleSaveHours": "Millions of people save hours of work through the knowledge of others on Q&A websites on a daily basis. Peeranha’s users are rewarded with PEER crypto tokens for valuable activities.",
        "app.containers.HomePage.platformUnderDeveloping": "The website is currently under development. Sign up for notifications to be one of the first to join and earn higher rewards as an early adopter.",
        "app.containers.HomePage.profitableAndModern": "Profitable and modern",
        "app.containers.HomePage.refCode": "Ref. code",
        "app.containers.HomePage.review": "Review",
        "app.containers.HomePage.rewardingUser": "Rewarding Users with Crypto",
        "app.containers.HomePage.rewards": "Rewards",
        "app.containers.HomePage.rewardsPool": "Rewards are distributed weekly to all contributors.  As the number of weekly contributors goes up, rewards per user go down over time. Joining early means enjoying higher levels of rewards for your pioneering contributions to an early community.",
        "app.containers.HomePage.romRem": "Roman Remniov",
        "app.containers.HomePage.romRemDescription": "Based in Minsk front-end developer, currently focused on data-management and User Experience in decentralized applications.",
        "app.containers.HomePage.romRemRole": "Front-end Developer",
        "app.containers.HomePage.ruleThePlatform": "Governing the Community",
        "app.containers.HomePage.sendMessage": "Send message",
        "app.containers.HomePage.sergeyIlin": "Sergey Ilin",
        "app.containers.HomePage.sergeyIlinDescription": "Developer and architect with over decade of experience building software from websites to large scale enterprise solutions for Fortune 500 companies. Passionate about finding groundbreaking practical applications of Blockchain technology.",
        "app.containers.HomePage.sergeyIlinRole": "Co-founder, CTO",
        "app.containers.HomePage.shareKnowledge": "Sharing Knowledge",
        "app.containers.HomePage.signUpFree": "Sign Up",
        "app.containers.HomePage.simpleAndAffordable": "Simple and affordable",
        "app.containers.HomePage.steveKreynin": "Steve Kreynin",
        "app.containers.HomePage.steveKreyninDescription": "Successful serial entrepreneur. CEO of Forte Group, an international IT Consulting Company.",
        "app.containers.HomePage.steveKreyninRole": "Co-founder, President",
        "app.containers.HomePage.subject": "Subject",
        "app.containers.HomePage.subjectTip": "Subject tip",
        "app.containers.HomePage.systemError": "System error",
        "app.containers.HomePage.team": "Team",
        "app.containers.HomePage.title": "Peeranha - Decentralized Q&A website with crypto rewards",
        "app.containers.HomePage.ulyanaPopova": "Ulyana Popova",
        "app.containers.HomePage.ulyanaPopovaDescription": "Ready to produce wire-frames, mock-ups, and prototypes which implement the modernization of systems with an effective, efficient, aesthetic, and uncluttered user experience. Able to use humour and energy to keep the momentum going.",
        "app.containers.HomePage.ulyanaPopovaRole": "UX and UI Designer",
        "app.containers.HomePage.weAppreciate": "We highly appreciate your feedback, opinion or suggestion for the platform. Send us few lines or even better let us know if you have 15 minutes to chat.",
        "app.containers.HomePage.weAreDecentralized": "Decentralized questions and answers website that rewards users with crypto tokens for their contributions.",
        "app.containers.HomePage.whetherYouAsk": "As users build their level of contributions, they also improve their reputation. The community recognizes valuable contributors who answer questions for others. Earning a high reputation unlocks privileges as a user’s standing within the community increases!",
        "app.containers.HomePage.worthyAndPrestig": "Worthy and prestigious",
        "app.containers.HomePage.yourContributionsRewarded": "Your Contributions Rewarded",
        "app.containers.HomePage.yourEmail": "Your email address",
        "app.containers.HomePage.yourEmailIsRegistred": "The website is under development but your email is registered. You will receive an email with the steps to continue registration when the website is ready.",
        "app.containers.HomePage.yourName": "Your name",
        "app.containers.HomePage.yourNameTip": "Your name tip",
        "app.containers.Login.accountNotCreatedName": "Account is not created yet",
        "app.containers.Login.authUserHasMore": "An authorized user has more options",
        "app.containers.Login.iForgotPassword": "I forgot my password",
        "app.containers.Login.scatterIsNotInstalled": "Check whether the Scatter and network settings are installed",
        "app.containers.Login.staySignedIn": "Stay signed in",
        "app.containers.Login.userIsNotRegistered": "User is not registered",
        "app.containers.Login.userIsNotSelected": "User is not selected",
        "app.containers.Login.weAreHappyYouAreHere": "We are happy you are here",
        "app.containers.Login.yourUsernameIsHow": "Your username is how you'll be known on Peeranha.",
        "app.containers.NotFoundPage.browseOurPopular": "Browse our popular {value}.",
        "app.containers.NotFoundPage.description": "404",
        "app.containers.NotFoundPage.ifYouFeelSomething": "If you feel something is missing that should be here, {value}.",
        "app.containers.NotFoundPage.title": "404",
        "app.containers.NotFoundPage.tryToBrowse": "Try to browse our recent {value}.",
        "app.containers.NotFoundPage.weAreSorry": "We're sorry, we couldn't find the page you requested.",
        "app.containers.PrivacyPolicy.description": "Privacy policy, description",
        "app.containers.PrivacyPolicy.title": "Privacy policy",
        "app.containers.Profile.aboutLabel": "About me",
        "app.containers.Profile.activity": "Activity",
        "app.containers.Profile.answered": "answered",
        "app.containers.Profile.authorizationData": "Authorization data",
        "app.containers.Profile.companyLabel": "Company",
        "app.containers.Profile.companyTip": "Company tip...",
        "app.containers.Profile.confirmPassword": "Confirm password",
        "app.containers.Profile.displayNameLabel": "Display name",
        "app.containers.Profile.displayNameTip": "Display name tip...",
        "app.containers.Profile.editProfile": "Edit profile",
        "app.containers.Profile.heHasnoAnswersAndQuestions": "He has no answers and questions.",
        "app.containers.Profile.informationIsBlank": "Information about you is currently blank.",
        "app.containers.Profile.lastAnswer": "Last answer",
        "app.containers.Profile.locationLabel": "Location",
        "app.containers.Profile.locationTip": "Location tip...",
        "app.containers.Profile.memberSince": "Member since ",
        "app.containers.Profile.newPassword": "New password",
        "app.containers.Profile.noAnswersYet": "No answers yet",
        "app.containers.Profile.oldPassword": "Old password",
        "app.containers.Profile.positionLabel": "Position",
        "app.containers.Profile.positionTip": "Position tip...",
        "app.containers.Profile.profile": "Profile",
        "app.containers.Profile.profileDescription": "Profile description",
        "app.containers.Profile.reputation": "Reputation",
        "app.containers.Profile.risen": "Risen",
        "app.containers.Profile.saveButton": "Save",
        "app.containers.Profile.seeMore": "See all {questions} and {answers}",
        "app.containers.Profile.userHasntActivityYet": "This user hasn’t activity yet",
        "app.containers.Profile.wrongUser": "Wrong user",
        "app.containers.Profile.youAnswered": "You answered",
        "app.containers.QuestionForm.communityLabel": "Community",
        "app.containers.QuestionForm.communityTip": "Community tip...",
        "app.containers.QuestionForm.contentLabel": "Body",
        "app.containers.QuestionForm.previewLabel": "Preview",
        "app.containers.QuestionForm.tagsLabel": "Tags",
        "app.containers.QuestionForm.tagsTip": "Tags tip...",
        "app.containers.QuestionForm.title": "Ask question",
        "app.containers.QuestionForm.titleLabel": "Title",
        "app.containers.QuestionForm.titleTip": "Title tip...",
        "app.containers.Questions.allCommunities": "All communities",
        "app.containers.Questions.noQuestions": "No questions",
        "app.containers.Questions.noQuestionsYet": "No questions yet.",
        "app.containers.Questions.readMyFeed": "Read my feed",
        "app.containers.Questions.goToCommunities": "Go to communities",
        "app.containers.Questions.subscribeToCommToKeep": "Subscribe to communities to keep track of topics that you are interested in.",
        "app.containers.Questions.thisIsNewCommunity": "This is a new community, you can be the first and your question may be the most popular.",
        "app.containers.Questions.title": "Questions",
        "app.containers.Questions.youDontHaveFeedToRead": "You don't have any feed to read",
        "app.containers.SignUp.almostDone": "Almost done",
        "app.containers.SignUp.checkYourEmail": "Check your email. You get verification code.",
        "app.containers.SignUp.confirmPassword": "Confirm password",
        "app.containers.SignUp.continue": "Continue",
        "app.containers.SignUp.description": "Registration | Description",
        "app.containers.SignUp.displayName": "Display name",
        "app.containers.SignUp.doYouHaveAlreadyAccount": "Do you already have an account?",
        "app.containers.SignUp.downloadKeys": "Download keys",
        "app.containers.SignUp.email": "Email",
        "app.containers.SignUp.eosAccountNotFound": "EOS account not found",
        "app.containers.SignUp.eosActivePrivateKey": "EOS Active Private Key",
        "app.containers.SignUp.eosName": "EOS name",
        "app.containers.SignUp.eosOwnerPrivateKey": "EOS Owner Private Key",
        "app.containers.SignUp.firstParagraphAlmostDone": "Peeranha is not a typical social app. It's powered by the Peeranha blockchain.",
        "app.containers.SignUp.goToMainPage": "Go to main page",
        "app.containers.SignUp.iAcceptPrivacyPolicy": "I accept terms of Privacy Policy.",
        "app.containers.SignUp.iHaveEosAccount": "I have EOS account",
        "app.containers.SignUp.iSaveMasterKey": "I save Master Key in a safe place. Understand that if I forget password then Master Key is the only way to restore access to my account.",
        "app.containers.SignUp.signUpViaEmailComplete": "I don't have EOS account",
        "app.containers.SignUp.ifYouCreateEos": "If you create an EOS account on this website, it comes with 0.2 EOS staked for CPU and Network bandwidth as well as 4KB of RAM.",
        "app.containers.SignUp.ifYouLikeToSkip": "If you'd like to skip the queue or stay anonymous, you can pay the account creation fee using a third party service.",
        "app.containers.SignUp.keysDoNotMatch": "Private keys do not match eos account name",
        "app.containers.SignUp.masterKey": "Master key",
        "app.containers.SignUp.or": "or",
        "app.containers.SignUp.password": "Password",
        "app.containers.SignUp.passwordsDoNotMatch": "Passwords do not match",
        "app.containers.SignUp.registrationWithEosAccountAlmostDone": "Registration is successfully passed. Now you can login and continue work in our app!",
        "app.containers.SignUp.secondParagraphAlmostDone": "The Peeranha blockchain powers many real time content apps like Peeranha, and is run by community members all around the world. To help protect them against bots and name squatters, a small fee is charged to create new accounts.",
        "app.containers.SignUp.sendAnotherCode": "Send another code",
        "app.containers.SignUp.signUp": "Sign Up",
        "app.containers.SignUp.signUpOptions": "Sign up options",
        "app.containers.SignUp.telosBlockchainPowers": "The Peeranha blockchain powers many real time content apps like Peeranha, and is run by community members all around the world. To help protect them against bots and name squatters, a small fee is charged to create new accounts.",
        "app.containers.SignUp.peeranhaIsNotTypical": "Peeranha is not a typical social app. It's powered by the Peeranha blockchain.",
        "app.containers.SignUp.storeThisKey": "Store this key",
        "app.containers.SignUp.theWayEosWorks": "The way EOS works is that new accounts can only be created by someone with an existing account. Creating an account also requires to stake a certain amount of EOS and to buy some RAM.",
        "app.containers.SignUp.thirdParagraphAlmostDone": "We're happy to cover this fee for you but we'll need your email and phone number to manually check that you're a real person. This process could take 1-2 weeks.",
        "app.containers.SignUp.title": "Registration",
        "app.containers.SignUp.userAlreadyRegistered": "User with such identity has been already registered",
        "app.containers.SignUp.verificationCode": "Verification code",
        "app.containers.SignUp.verify": "Verify",
        "app.containers.SignUp.weAreHappyToCover": "We're happy to cover this fee for you but we'll need your email and phone number to manually check that you're a real person. This process could take 1-2 weeks.",
        "app.containers.SignUp.weWillNotify": "We will notify you when your account will be ready. Usually it takes no longer, than 4 hours.",
        "app.containers.SignUp.whyYouLikeUs": "Why do you like Peeranha?",
        "app.containers.SignUp.youHaveToSaveKeys": "You have to save keys carefully",
        "app.containers.SignUp.youNeedEosAccount": "You nees EOS account",
        "app.containers.SuggestedCommunities.description": "Suggested communities | Description",
        "app.containers.SuggestedCommunities.title": "Suggested communities",
        "app.containers.SuggestedCommunities.votingForNewComm": "Vote for new community",
        "app.containers.SuggestedCommunities.whyWeeNeedIt": "Why we need it?",
        "app.containers.SuggestedTags.description": "Suggested tags | Description",
        "app.containers.SuggestedTags.noSuggestedTags": "There are no suggested tags",
        "app.containers.SuggestedTags.tagDescription": "Description",
        "app.containers.SuggestedTags.title": "Suggested tags",
        "app.containers.SuggestedTags.topTagsInCommunity": "Top tags in community",
        "app.containers.Support.alsoWeHighly": "Also we highly appreciate your feedback, opinion or suggestion for the platform. Send us few lines or even better let us know if you have 15 minutes to chat.",
        "app.containers.Support.description": "Support | Description",
        "app.containers.Support.feelFreeToAsk": "Feel free to ask",
        "app.containers.Support.title": "Support",
        "app.containers.Tags.backToList": "Back to list",
        "app.containers.Tags.creatorCannotUpvoteOwnComm": "Creator cannot upvote own tag",
        "app.containers.Tags.didntFindSuitableTag": "Did not find suitable tag?",
        "app.containers.Tags.suggestTagWhichWillbeUseful": "Suggest tag, which will be useful to you and 100 other users who will vote for it.",
        "app.containers.Tags.youHaveAlreadyVoted": "You have already voted",
        "app.containers.TagsCollection.title": "Tags collection",
        "app.containers.TagsOfCommunity.createTag": "Create tag",
        "app.containers.TagsOfCommunity.description": "Description of Tags",
        "app.containers.TagsOfCommunity.suggestedTags": "Suggested tags",
        "app.containers.TagsOfCommunity.title": "Tags",
        "app.containers.TagsOfCommunity.voteForNewTags": "Vote for new tags",
        "app.containers.Users.description": "Users: description",
        "app.containers.Users.title": "Users",
        "app.containers.ViewQuestion.addComment": "Add comment",
        "app.containers.ViewQuestion.alreadyAnswered": "You already answered this question",
        "app.containers.ViewQuestion.answerIsCorrect": "You cannot delete it because your answer is marked as correct",
        "app.containers.ViewQuestion.answers": "answers",
        "app.containers.ViewQuestion.cannotCompleteBecauseBlocked": "Yon can't complete this action. You blocked it earlier",
        "app.containers.ViewQuestion.cannotCompleteBecauseVoted": "Yon can't complete this action. You voted earlier",
        "app.containers.ViewQuestion.commentButton": "Comment",
        "app.containers.ViewQuestion.communityChoice": "Community choice",
        "app.containers.ViewQuestion.creatorCannot": "Creator cannot complete this action",
        "app.containers.ViewQuestion.deleteButton": "Delete",
        "app.containers.ViewQuestion.description": "Question's description",
        "app.containers.ViewQuestion.editButton": "Edit",
        "app.containers.ViewQuestion.itemsMax": "Number of items is achieved of maximum",
        "app.containers.ViewQuestion.lastEdited": "Last edited",
        "app.containers.ViewQuestion.moreComments": "More comments",
        "app.containers.ViewQuestion.noRootsToVote": "You cannot vote to own questions and answers",
        "app.containers.ViewQuestion.notEnoughEnergy": "To complete this action, your energy has to be more than",
        "app.containers.ViewQuestion.notEnoughModPoints": "To complete this action, your moderation points rating has to be more than",
        "app.containers.ViewQuestion.notEnoughRating": "To complete this action, your rating has to be more than",
        "app.containers.ViewQuestion.postAnswerButton": "Post answer",
        "app.containers.ViewQuestion.postCommentButton": "Post comment",
        "app.containers.ViewQuestion.questionNotExist": "This question does not exist",
        "app.containers.ViewQuestion.saveButton": "Save",
        "app.containers.ViewQuestion.showMoreAnswers": "Show more answers {value}",
        "app.containers.ViewQuestion.theBest": "The best",
        "app.containers.ViewQuestion.theBestAnswer": "The best answer",
        "app.containers.ViewQuestion.title": "Question's page",
        "app.containers.ViewQuestion.voteToDelete": "Block",
        "app.containers.ViewQuestion.youHaveAnswers": "You cannot delete it because you already have some answers by your question",
        "app.containers.ViewQuestion.youVoted": "You have completed this action earlier",
        "app.containers.ViewQuestion.yourAnswer": "Your answer",
        "app.containers.VoteForNewCommunityButton.creatorCannotUpvoteOwnComm": "Creator cannot upvote own community",
        "app.containers.VoteForNewCommunityButton.youCannotChange": "You can’t change your vote. Are you sure?",
        "app.containers.VoteForNewCommunityButton.youHaveAlreadyVoted": "You have already voted",
        "app.containers.VoteForNewTagButton.creatorCannotUpvoteOwnTag": "Creator cannot upvote own tag",
        "app.containers.Wallet.currentPeriod": "Current period in progress",
        "app.containers.Wallet.description": "Wallet | Description",
        "app.containers.Wallet.eosAccount": "EOS account",
        "app.containers.Wallet.estimatedPayout": "Estimated payout",
        "app.containers.Wallet.getReward": "Get reward",
        "app.containers.Wallet.paidOut": "Paid out",
        "app.containers.Wallet.payoutPending": "Payout pending",
        "app.containers.Wallet.periodStillInProgress": "This period is still in progress. You will see more details on the next week.",
        "app.containers.Wallet.received": "Received",
        "app.containers.Wallet.rewarded": "Rewarded",
        "app.containers.Wallet.title": "Wallet",
        "app.containers.Wallet.week": "Week",
        "web_integration.errors.accountAlreadyRegistered": "Account already registered",
        "web_integration.errors.accountWithEmailIsntRegistered": "Account with given email isn't registered yet",
        "web_integration.errors.codeExpiredOrIncorrect": "Code expired or entered incorrectly",
        "web_integration.errors.emailAlreadyInUse": "Email already in use",
        "web_integration.errors.invalidCipher": "Invalid cipher IV in passphase",
        "web_integration.errors.invalidEncryptionKey": "Invalid encryption key",
        "web_integration.errors.passphraseIsInvalid": "The passphrase is invalid",
        "web_integration.errors.requestExpiredOrSomeOperationWasPassed": "User isn't request opertion or request expired",
        "web_integration.errors.unableToBuildModel": "Unable to build model",
        "web_integration.errors.unableToDecryptUserKey": "Check your entered data",
        "web_integration.errors.unknownError": "Unknown error. Please submit bug report!",
        "web_integration.errors.userDidntMakeRequestToVerifyEmail": "Email isn't request registration or request expired",
        "web_integration.errors.userDidntRequestActivateAcc": "This user didn't request activate account",
        "web_integration.errors.userDidntStoreKey": "User didn't store owner key in our service",
        "web_integration.errors.wrongMasterKey": "Wrong master key",
        "web_integration.errors.wrongPassword": "Wrong password",
        "web_integration.errors.youSendTooManRequests": "You send too many requests in last period",
      }
    }
    upVote={[MockFunction]}
    voteToDelete={[MockFunction]}
  />
</React.Fragment>
`;

exports[`<ViewQuestion /> render @questionDataLoading is true 1`] = `
<React.Fragment>
  <UNDEFINED
    articleModifiedTime=""
    articlePublishedTime=""
    description="content"
    keywords="tag1, title"
    language="en"
    title="title"
  />
  <UNDEFINED />
</React.Fragment>
`;
